Fix machine cards (and other cards) overlaping when the content increases the height

--- a/app/assets/stylesheets/app.components.scss
+++ b/app/assets/stylesheets/app.components.scss
@@ -599,11 +599,14 @@ padding: 10px;
   }
 }
 
-.reservable-card {
+/* NOTE: This causes cards to overlap in some cases.
+ * It is better to allow the elements to adjust their height.
+ .reservable-card {
   @media only screen and (min-width: 768px) {
     height: 24em;
   }
 }
+*/
 
 .disabled-reservable {
   opacity: 0.5 !important;
